Package_Tools/include-C/gmp/gmp.h

typedef unsigned long int	mp_bitcnt_t;
typedef int			mp_size_t;
typedef int			mp_exp_t;
typedef long int		mp_size_t;
typedef long int		mp_exp_t;
/* Types for function declarations in gmp files.  */
/* ??? Should not pollute user name space with these ??? */
typedef const __mpz_struct *mpz_srcptr;
typedef const __mpf_struct *mpf_srcptr;
typedef __mpf_struct *mpf_ptr;
typedef const __mpq_struct *mpq_srcptr;
typedef __gmp_randstate_struct *gmp_randstate_ptr;
/**************** Float (i.e. F) routines.  ****************/

extern void mpf_abs (mpf_ptr, mpf_srcptr);
extern void mpf_add (mpf_ptr, mpf_srcptr, mpf_srcptr);
extern void mpf_add_ui (mpf_ptr, mpf_srcptr, unsigned long int);
extern void mpf_ceil (mpf_ptr, mpf_srcptr);
extern void mpf_clear (mpf_ptr);
extern void mpf_clears (mpf_ptr, ...);
extern int mpf_cmp (mpf_srcptr, mpf_srcptr)  ;
extern int mpf_cmp_z (mpf_srcptr, mpz_srcptr)  ;
extern int mpf_cmp_d (mpf_srcptr, double) ;
extern int mpf_cmp_si (mpf_srcptr, signed long int)  ;
extern int mpf_cmp_ui (mpf_srcptr, unsigned long int)  ;
extern void mpf_div (mpf_ptr, mpf_srcptr, mpf_srcptr);
extern void mpf_div_2exp (mpf_ptr, mpf_srcptr, mp_bitcnt_t);
extern void mpf_div_ui (mpf_ptr, mpf_srcptr, unsigned long int);
extern void mpf_dump (mpf_srcptr);
extern int mpf_eq (mpf_srcptr, mpf_srcptr, mp_bitcnt_t) ;
extern int mpf_fits_sint_p (mpf_srcptr)  ;
extern int mpf_fits_slong_p (mpf_srcptr)  ;
extern int mpf_fits_sshort_p (mpf_srcptr)  ;
extern int mpf_fits_uint_p (mpf_srcptr)  ;
extern int mpf_fits_ulong_p (mpf_srcptr)  ;
extern int mpf_fits_ushort_p (mpf_srcptr)  ;
extern void mpf_floor (mpf_ptr, mpf_srcptr);
extern double mpf_get_d (mpf_srcptr) ;
extern double mpf_get_d_2exp (signed long int *, mpf_srcptr);
extern mp_bitcnt_t mpf_get_default_prec (void)  ;
extern mp_bitcnt_t mpf_get_prec (mpf_srcptr)  ;
extern long mpf_get_si (mpf_srcptr)  ;
extern char *mpf_get_str (char *, mp_exp_t *, int, size_t, mpf_srcptr);
extern unsigned long mpf_get_ui (mpf_srcptr)  ;
extern void mpf_init (mpf_ptr);
extern void mpf_init2 (mpf_ptr, mp_bitcnt_t);
extern void mpf_inits (mpf_ptr, ...);
extern void mpf_init_set (mpf_ptr, mpf_srcptr);
extern void mpf_init_set_d (mpf_ptr, double);
extern void mpf_init_set_si (mpf_ptr, signed long int);
extern int mpf_init_set_str (mpf_ptr, const char *, int);
extern void mpf_init_set_ui (mpf_ptr, unsigned long int);
extern size_t mpf_inp_str (mpf_ptr, FILE *, int);
extern int mpf_integer_p (mpf_srcptr)  ;
extern void mpf_mul (mpf_ptr, mpf_srcptr, mpf_srcptr);
extern void mpf_mul_2exp (mpf_ptr, mpf_srcptr, mp_bitcnt_t);
extern void mpf_mul_ui (mpf_ptr, mpf_srcptr, unsigned long int);
extern void mpf_neg (mpf_ptr, mpf_srcptr);
extern size_t mpf_out_str (FILE *, int, size_t, mpf_srcptr);
extern void mpf_pow_ui (mpf_ptr, mpf_srcptr, unsigned long int);
extern void mpf_random2 (mpf_ptr, mp_size_t, mp_exp_t);
extern void mpf_reldiff (mpf_ptr, mpf_srcptr, mpf_srcptr);
extern void mpf_set (mpf_ptr, mpf_srcptr);
extern void mpf_set_d (mpf_ptr, double);
extern void mpf_set_default_prec (mp_bitcnt_t) ;
extern void mpf_set_prec (mpf_ptr, mp_bitcnt_t);
extern void mpf_set_prec_raw (mpf_ptr, mp_bitcnt_t) ;
extern void mpf_set_q (mpf_ptr, mpq_srcptr);
extern void mpf_set_si (mpf_ptr, signed long int);
extern int mpf_set_str (mpf_ptr, const char *, int);
extern void mpf_set_ui (mpf_ptr, unsigned long int);
extern void mpf_set_z (mpf_ptr, mpz_srcptr);
extern size_t mpf_size (mpf_srcptr)  ;
extern void mpf_sqrt (mpf_ptr, mpf_srcptr);
extern void mpf_sqrt_ui (mpf_ptr, unsigned long int);
extern void mpf_sub (mpf_ptr, mpf_srcptr, mpf_srcptr);
extern void mpf_sub_ui (mpf_ptr, mpf_srcptr, unsigned long int);
extern void mpf_swap (mpf_ptr, mpf_ptr) ;
extern void mpf_trunc (mpf_ptr, mpf_srcptr);
extern void mpf_ui_div (mpf_ptr, unsigned long int, mpf_srcptr);
extern void mpf_ui_sub (mpf_ptr, unsigned long int, mpf_srcptr);
extern void mpf_urandomb (mpf_ptr, gmp_randstate_ptr, mp_bitcnt_t);