Packages_2024/gmp_6.3.0/fp_gmp.pas


{*************** Float (i.e. F) routines.  *************** }
procedure mpf_abs(para1: Pmpf; para2: Pmpf); cdecl; external libgmp name '__gmpf_abs';
procedure mpf_add(para1: Pmpf; para2: Pmpf; para3: Pmpf); cdecl; external libgmp name '__gmpf_add';
procedure mpf_add_ui(para1: Pmpf; para2: Pmpf; para3: Tculong); cdecl; external libgmp name '__gmpf_add_ui';
procedure mpf_ceil(para1: Pmpf; para2: Pmpf); cdecl; external libgmp name '__gmpf_ceil';
procedure mpf_clear(para1: Pmpf); cdecl; external libgmp name '__gmpf_clear';
procedure mpf_clears(para1: Pmpf); varargs; cdecl; external libgmp name '__gmpf_clears';
function mpf_cmp(para1: Pmpf; para2: Pmpf): longint; cdecl; external libgmp name '__gmpf_cmp';
function mpf_cmp_z(para1: Pmpf; para2: Pmpz): longint; cdecl; external libgmp name '__gmpf_cmp_z';
function mpf_cmp_d(para1: Pmpf; para2: double): longint; cdecl; external libgmp name '__gmpf_cmp_d';
function mpf_cmp_si(para1: Pmpf; para2: Tclong): longint; cdecl; external libgmp name '__gmpf_cmp_si';
function mpf_cmp_ui(para1: Pmpf; para2: Tculong): longint; cdecl; external libgmp name '__gmpf_cmp_ui';
procedure mpf_div(para1: Pmpf; para2: Pmpf; para3: Pmpf); cdecl; external libgmp name '__gmpf_div';
procedure mpf_div_2exp(para1: Pmpf; para2: Pmpf; para3: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpf_div_2exp';
procedure mpf_div_ui(para1: Pmpf; para2: Pmpf; para3: Tculong); cdecl; external libgmp name '__gmpf_div_ui';
procedure mpf_dump(para1: Pmpf); cdecl; external libgmp name '__gmpf_dump';
function mpf_eq(para1: Pmpf; para2: Pmpf; para3: Tmp_bitcnt_t): longint; cdecl; external libgmp name '__gmpf_eq';
function mpf_fits_sint_p(para1: Pmpf): longint; cdecl; external libgmp name '__gmpf_fits_sint_p';
function mpf_fits_slong_p(para1: Pmpf): longint; cdecl; external libgmp name '__gmpf_fits_slong_p';
function mpf_fits_sshort_p(para1: Pmpf): longint; cdecl; external libgmp name '__gmpf_fits_sshort_p';
function mpf_fits_uint_p(para1: Pmpf): longint; cdecl; external libgmp name '__gmpf_fits_uint_p';
function mpf_fits_ulong_p(para1: Pmpf): longint; cdecl; external libgmp name '__gmpf_fits_ulong_p';
function mpf_fits_ushort_p(para1: Pmpf): longint; cdecl; external libgmp name '__gmpf_fits_ushort_p';
procedure mpf_floor(para1: Pmpf; para2: Pmpf); cdecl; external libgmp name '__gmpf_floor';
function mpf_get_d(para1: Pmpf): double; cdecl; external libgmp name '__gmpf_get_d';
function mpf_get_d_2exp(para1: Pclong; para2: Pmpf): double; cdecl; external libgmp name '__gmpf_get_d_2exp';
function mpf_get_default_prec: Tmp_bitcnt_t; cdecl; external libgmp name '__g';
function mpf_get_prec(para1: Pmpf): Tmp_bitcnt_t; cdecl; external libgmp name '__gmpf_get_prec';
function mpf_get_si(para1: Pmpf): Tclong; cdecl; external libgmp name '__gmpf_get_si';
function mpf_get_str(para1: pchar; para2: Pmp_exp_t; para3: longint; para4: Tsize_t; para5: Pmpf): pchar; cdecl; external libgmp name '__gmpf_get_str';
function mpf_get_ui(para1: Pmpf): Tculong; cdecl; external libgmp name '__gmpf_get_ui';
procedure mpf_init(para1: Pmpf); cdecl; external libgmp name '__gmpf_init';
procedure mpf_init2(para1: Pmpf; para2: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpf_init2';
procedure mpf_inits(para1: Pmpf); varargs; cdecl; external libgmp name '__gmpf_inits';
procedure mpf_init_set(para1: Pmpf; para2: Pmpf); cdecl; external libgmp name '__gmpf_init_set';
procedure mpf_init_set_d(para1: Pmpf; para2: double); cdecl; external libgmp name '__gmpf_init_set_d';
procedure mpf_init_set_si(para1: Pmpf; para2: Tclong); cdecl; external libgmp name '__gmpf_init_set_si';
function mpf_init_set_str(para1: Pmpf; para2: pchar; para3: longint): longint; cdecl; external libgmp name '__gmpf_init_set_str';
procedure mpf_init_set_ui(para1: Pmpf; para2: Tculong); cdecl; external libgmp name '__gmpf_init_set_ui';
function mpf_inp_str(para1: Pmpf; para2: PFILE; para3: longint): Tsize_t; cdecl; external libgmp name '__gmpf_inp_str';
function mpf_integer_p(para1: Pmpf): longint; cdecl; external libgmp name '__gmpf_integer_p';
procedure mpf_mul(para1: Pmpf; para2: Pmpf; para3: Pmpf); cdecl; external libgmp name '__gmpf_mul';
procedure mpf_mul_2exp(para1: Pmpf; para2: Pmpf; para3: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpf_mul_2exp';
procedure mpf_mul_ui(para1: Pmpf; para2: Pmpf; para3: Tculong); cdecl; external libgmp name '__gmpf_mul_ui';
procedure mpf_neg(para1: Pmpf; para2: Pmpf); cdecl; external libgmp name '__gmpf_neg';
function mpf_out_str(para1: PFILE; para2: longint; para3: Tsize_t; para4: Pmpf): Tsize_t; cdecl; external libgmp name '__gmpf_out_str';
procedure mpf_pow_ui(para1: Pmpf; para2: Pmpf; para3: Tculong); cdecl; external libgmp name '__gmpf_pow_ui';
procedure mpf_random2(para1: Pmpf; para2: Tmp_size_t; para3: Tmp_exp_t); cdecl; external libgmp name '__gmpf_random2';
procedure mpf_reldiff(para1: Pmpf; para2: Pmpf; para3: Pmpf); cdecl; external libgmp name '__gmpf_reldiff';
procedure mpf_set(para1: Pmpf; para2: Pmpf); cdecl; external libgmp name '__gmpf_set';
procedure mpf_set_d(para1: Pmpf; para2: double); cdecl; external libgmp name '__gmpf_set_d';
procedure mpf_set_default_prec(para1: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpf_set_default_prec';
procedure mpf_set_prec(para1: Pmpf; para2: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpf_set_prec';
procedure mpf_set_prec_raw(para1: Pmpf; para2: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpf_set_prec_raw';
procedure mpf_set_q(para1: Pmpf; para2: Pmpq); cdecl; external libgmp name '__gmpf_set_q';
procedure mpf_set_si(para1: Pmpf; para2: Tclong); cdecl; external libgmp name '__gmpf_set_si';
function mpf_set_str(para1: Pmpf; para2: pchar; para3: longint): longint; cdecl; external libgmp name '__gmpf_set_str';
procedure mpf_set_ui(para1: Pmpf; para2: Tculong); cdecl; external libgmp name '__gmpf_set_ui';
procedure mpf_set_z(para1: Pmpf; para2: Pmpz); cdecl; external libgmp name '__gmpf_set_z';
function mpf_size(para1: Pmpf): Tsize_t; cdecl; external libgmp name '__gmpf_size';
procedure mpf_sqrt(para1: Pmpf; para2: Pmpf); cdecl; external libgmp name '__gmpf_sqrt';
procedure mpf_sqrt_ui(para1: Pmpf; para2: Tculong); cdecl; external libgmp name '__gmpf_sqrt_ui';
procedure mpf_sub(para1: Pmpf; para2: Pmpf; para3: Pmpf); cdecl; external libgmp name '__gmpf_sub';
procedure mpf_sub_ui(para1: Pmpf; para2: Pmpf; para3: Tculong); cdecl; external libgmp name '__gmpf_sub_ui';
procedure mpf_swap(para1: Pmpf; para2: Pmpf); cdecl; external libgmp name '__gmpf_swap';
procedure mpf_trunc(para1: Pmpf; para2: Pmpf); cdecl; external libgmp name '__gmpf_trunc';
procedure mpf_ui_div(para1: Pmpf; para2: Tculong; para3: Pmpf); cdecl; external libgmp name '__gmpf_ui_div';
procedure mpf_ui_sub(para1: Pmpf; para2: Tculong; para3: Pmpf); cdecl; external libgmp name '__gmpf_ui_sub';
procedure mpf_urandomb(para1: Pmpf; para2: Pgmp_randstate; para3: Tmp_bitcnt_t); cdecl; external libgmp name '__gmpf_urandomb';
